# artshow-jockey

./: .dockerignore  .env  .flake8  .gitignore  .travis.yml  Dockerfile  INSTALL.md  Pipfile  README.md  default.nix  deploy.sh  docker-compose.yml  local_settings.py.example  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf
.devcontainer/: devcontainer.json
.github/workflows/: deploy-image.yml  docker.yml
artshow/: __init__.py  addbidder.py  admin.py  announcement.py  bid.py  bid_entry.py  bid_urls.py  bidderreg.py  cashier.py  cheques.py  conf.py  context_processors.py  csvreports.py  email1.py  forms.py  invoicegen.py  lookups.py  manage.py  manage_urls.py  models.py  paypal.py  pdfreports.py  preprint_dummy.py  processbatchscan.py  register.py  reports.py  square.py  tasks.py  telegram.py  testdata.py  text2pdf.py  unicodewriter.py  urls.py  utils.py  views.py  voice_auction.py  workflows.py
artshow-utils/: overgrid.py
artshow/fixtures/: artshowemailtemplate.json  artshowpaymenttypes.json  artshowspaces.json  testsquareterminals.json
artshow/migrations/: 0001_initial.py  0002_bid_bidderid.py  0003_piece_bids_updated.py  0004_bidder_details_changed.py  0005_auto_20171228_2239.py  0006_auto_20180409_0040.py  0007_piece_reproduction_rights_included.py  0009_location.py  (+11 more)
artshowjockey/: celery.py  common_settings.py  settings.py  urls.py  wsgi.py
peeps/: lookups.py  models.py  urls.py
tinyannounce/: admin.py  models.py  views.py
tinyreg/: forms.py  urls.py  views.py
udev/: 98-artshow-printers.rules  README.md  install.sh  unbind_usblp.sh
(+149 files in other folders)
