[project]
name = "artshow-jockey"
version = "0.1.0"
description = "An application to assist in the management of a convention-style art show."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "celery[sqs]>=5.5.3",
    "django==5.2.*",
    "django-ajax-selects>=3.0.3",
    "django-appconf>=1.1.0",
    "django-celery-results>=2.6.0",
    "django-formtools>=2.5.1",
    "django-ses>=4.4.0",
    "environs[django]>=14.3.0",
    "gunicorn>=23.0.0",
    "num2words>=0.5.14",
    "pdfrw>=0.4",
    "psycopg[binary]>=3.2.9",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "squareup==43.0.2.20250820",
    "supervisor>=4.3.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "flake8>=7.3.0",
    "oauthlib>=3.3.1",
]
